<resources>
    <string name="app_name">TechnicalTest</string>
    <string name="btnOn">ON</string>
    <string name="btnOff">OFF</string>
    <string name="txtControl">What do you want to control ?</string>
    <string name="lightDevice">Light</string>
    <string name="heaterDevice">Heater</string>
    <string name="rollingShutterDevice">RollingShutter</string>
    <string name="btnChangeBirthdate">change birthdate</string>
    <string name="numStreet">N°</string>
    <string name="address">Address</string>
    <string name="postalCode">Postal Code</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="email">Email</string>
    <string name="btnChangeInfo">change informations</string>
    <string name="btnConfirm">Confirm</string>
    <string name="maxTemp">max temperature reached</string>
    <string name="textWelcome">Welcome %1$s</string>
    <string name="errorFirstname">Enter your firstname</string>
    <string name="errorInvalidFirstname">Enter a valid firstname</string>
    <string name="errorLastname">Enter your lastname</string>
    <string name="errorInvalidLastname">Enter a valid lastname</string>
    <string name="errorStreetNumber">Enter your street number</string>
    <string name="errorStreet">Enter your street</string>
    <string name="errorInvalidStreet">Enter a valid street</string>
    <string name="errorPostalCode">Enter your postal code</string>
    <string name="errorCity">Enter your city</string>
    <string name="errorCountry">Enter your country</string>
    <string name="errorInvalidCity">Enter a valid city</string>
    <string name="errorInvalidCountry">Enter a valid country</string>
    <string name="errorEmail">Enter your email</string>
    <string name="errorInvalidEmail">Enter a valid email</string>
    <string name="errorBirthdate">Enter your birthdate</string>
    <string name="selectBirthdate">Select your birthdate</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="deleteDevice">Do you want to delete this device ?</string>
    <string name="btnYesDelete">Yes</string>
</resources>